// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E - react Monorepo project Installs react package 1`] = `
"$ /tmp/test-react/monorepo-project/node_modules/.bin/ts-dev-tools install
Installing @ts-dev-tools/core...
Applying migration \\"20201024173398-init\\"...
Migration \\"20201024173398-init\\" applied!
Applying migration \\"20201111162698-init\\"...
Migration \\"20201111162698-init\\" applied!
Applying migration \\"20220617100200-prettier-cache\\"...
Migration \\"20220617100200-prettier-cache\\" applied!
Checking for duplicate dev dependencies...
Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - react Simple project Installs react package 1`] = `
"$ /tmp/test-react/simple-project/node_modules/.bin/ts-dev-tools install
Installing @ts-dev-tools/core...
Applying migration \\"20201024173398-init\\"...
Migration \\"20201024173398-init\\" applied!
Applying migration \\"20201111162698-init\\"...
Migration \\"20201111162698-init\\" applied!
Applying migration \\"20220617100200-prettier-cache\\"...
Migration \\"20220617100200-prettier-cache\\" applied!
Checking for duplicate dev dependencies...
Check for duplicate dev dependencies done!
Installation done!"
`;
